objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Default</fullName>
        <description>Default support process for Orchestrator</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General Process</fullName>
        <description>Process general with Case status as basis</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Process BSCE</fullName>
        <description>Support Process for BCSE</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Updated</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Process Tech</fullName>
        <description>Test Process Tech</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Verify</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Topnet Process</fullName>
        <description>Support Process used for Topnet Order</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer approval pending</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reject</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Waiting for closing</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cscrm__Address__c.cscrm__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Orchestration_Step_Close_Reason__c</fullName>
        <label>Orchestration Step Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed successfully</fullName>
                </value>
                <value>
                    <fullName>Could not be completed</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Cannot Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPOFA__Orchestration_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Step</label>
        <referenceTo>CSPOFA__Orchestration_Step__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Path_Tech__c</fullName>
        <label>Case Path Tech</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kundenerfassung</fullName>
                </value>
                <value>
                    <fullName>Serviceerfassung</fullName>
                </value>
                <value>
                    <fullName>Problemerfassung</fullName>
                </value>
                <value>
                    <fullName>Detailserfassung</fullName>
                </value>
                <value>
                    <fullName>Resume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Account_Parent__c</fullName>
        <label>Prior Account Parent</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Billing_State__c</fullName>
        <formula>Address__r.cscrm__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_CH_ID__c</fullName>
        <formula>Account.UPC_CH_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CH ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Customer_Token__c</fullName>
        <formula>Account.UPC_Customer_Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer Token</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Email__c</fullName>
        <formula>Account.UPC_email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Fax__c</fullName>
        <formula>Account.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Lifecycle__c</fullName>
        <formula>TEXT(Account.UPC_Customer_Lifecycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Lifecycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Mobile__c</fullName>
        <formula>Account.UPC_Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Owner__c</fullName>
        <formula>Account.Account_Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Parent__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Suspended__c</fullName>
        <formula>Account.UPC_Suspended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Account_UID__c</fullName>
        <formula>Account.UPC_UID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Website__c</fullName>
        <formula>HYPERLINK( Account.Website , Account.Website)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_BP_Internet_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BP Internet Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Cases (BP Internet Service)</relationshipLabel>
        <relationshipName>BP_Internet_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_BP_Voice_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BP Voice Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Cases (BP Voice Service)</relationshipLabel>
        <relationshipName>BP_Voice_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Bundle_SAP_Id__c</fullName>
        <label>Bundle SAP@Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Case_Age_Business_day__c</fullName>
        <formula>if (ISPICKVAL ( Status , &quot;Closed&quot;), 
null, 
((5 * ( FLOOR( ( today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( today() - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( datevalue(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( datevalue(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age Business Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Case_Age__c</fullName>
        <description>Used to calculate the case age in number of days.</description>
        <formula>IF(
	ISBLANK(ClosedDate),
	TODAY () - DATEVALUE(CreatedDate),
	DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case Age calculated in days</inlineHelpText>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Credit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note</label>
        <referenceTo>UPC_Credit_Note__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Customer_External_ID__c</fullName>
        <description>Customer External ID</description>
        <label>Debitor number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_External_ID__c</fullName>
        <description>External ID</description>
        <label>Taifun-No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Flag_Case_BCSE__c</fullName>
        <formula>if (ISPICKVAL ( Status , &quot;Closed&quot;), 
null, 
if ((5 * ( FLOOR( ( today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( today() - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( datevalue(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( datevalue(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) ) &lt;= 2,IMAGE(&apos;/resource/flag_green&apos;,&apos;green&apos;,20,20), 
if ((5 * ( FLOOR( ( today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( today() - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( datevalue(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( datevalue(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) ) = 3,IMAGE(&apos;/resource/flag_yellow&apos;,&apos;yellow&apos;,20,20), 
if ((5 * ( FLOOR( ( today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( today() - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( datevalue(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( datevalue(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) ) &gt;= 4,IMAGE(&apos;/resource/flag_red&apos;,&apos;red&apos;,20,20), 
NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Internet_SAP_Id__c</fullName>
        <label>Internet SAP@Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity used to relate all case integration required fields.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Order record</description>
        <inlineHelpText>Releated Order record</inlineHelpText>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_BillingState__c</fullName>
        <label>Prior Account Billing State</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_CH_ID__c</fullName>
        <label>Prior Account CH ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_Email__c</fullName>
        <label>Prior Account Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_Fax__c</fullName>
        <label>Prior Account Fax</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_Lifecycle__c</fullName>
        <label>Prior Account Lifecycle</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_Mobile__c</fullName>
        <label>Prior Account Mobile</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_Name__c</fullName>
        <label>Prior Account Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_Owner__c</fullName>
        <label>Prior Account Owner</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_Phone__c</fullName>
        <label>Prior Account Phone</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_UID__c</fullName>
        <label>Prior Account UID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Account_Website__c</fullName>
        <label>Prior Account Website</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Prior_Sales_Segment__c</fullName>
        <label>Prior Sales Segment</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Process_Terms__c</fullName>
        <label>Process Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_DeviceOther_Description__c</fullName>
        <label>Device Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_DeviceOther__c</fullName>
        <label>Device Other</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_Email_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_Hardware_Choice__c</fullName>
        <label>Hardware Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Modem / Router</fullName>
                </value>
                <value>
                    <fullName>Telefon</fullName>
                </value>
                <value>
                    <fullName>Andere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_SUP_Language_Spoken__c</fullName>
        <label>Language Spoken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_SUP_Last_Information__c</fullName>
        <label>Last Information</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_MacAddressModemNew__c</fullName>
        <label>Mac Address Modem New</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_MacAddressModemOld__c</fullName>
        <label>Mac Address Modem Old</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_MacAddressPhoneNew__c</fullName>
        <label>Mac Address Phone New</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_MacAddressPhoneOld__c</fullName>
        <label>Mac Address Phone Old</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_Modem_DeviceNew__c</fullName>
        <label>Modem Device New</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connect Box</fullName>
                </value>
                <value>
                    <fullName>Hitron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_SUP_Modem_DeviceOld__c</fullName>
        <label>Modem Device Old</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco EPC3925</fullName>
                </value>
                <value>
                    <fullName>Connect Box</fullName>
                </value>
                <value>
                    <fullName>Hitron</fullName>
                </value>
                <value>
                    <fullName>Technicolor</fullName>
                </value>
                <value>
                    <fullName>Thomson TWG 870</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_SUP_Number_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Number Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_Phone_DeviceNew__c</fullName>
        <label>Phone Device New</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone 1</fullName>
                </value>
                <value>
                    <fullName>Phone 2</fullName>
                </value>
                <value>
                    <fullName>Phone 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_SUP_Phone_DeviceOld__c</fullName>
        <label>Phone Device Old</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone A</fullName>
                </value>
                <value>
                    <fullName>Phone B</fullName>
                </value>
                <value>
                    <fullName>Phone C</fullName>
                </value>
                <value>
                    <fullName>Phone 1</fullName>
                </value>
                <value>
                    <fullName>Phone 2</fullName>
                </value>
                <value>
                    <fullName>Phone 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_SUP_Remark_Modem__c</fullName>
        <label>Remark Modem</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_Remark_Phone__c</fullName>
        <label>Remark Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_SUP_Ticket_Number_told__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Number told</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Sales_Subsegment__c</fullName>
        <formula>text( Account.UPC_Sales_Subsegment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Subsegment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Segment_Channel__c</fullName>
        <formula>text(Account.UPC_Segment_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Customer_Remark__c</fullName>
        <label>Service Customer Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Line Item</label>
        <referenceTo>csord__Service_Line_Item__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>csord__Service__c.UPC_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link case to Site</description>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UPC_Site__c.UPC_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UPC_Site__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_TaifunID__c</fullName>
        <formula>Account.UPC_Taifun_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taifun ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Taifun_SAP_Formula__c</fullName>
        <formula>UPC_Service__r.UPC_Taifun_SAP_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taifun SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Taifun_SAP__c</fullName>
        <description>Used to store a unique identifier of a service provisioned in Taifun.</description>
        <inlineHelpText>Used to store a unique identifier of a service provisioned in Taifun.</inlineHelpText>
        <label>Taifun SAP</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Date__c</fullName>
        <description>The real termination date that comes from Taifun</description>
        <inlineHelpText>The real termination date that comes from Taifun</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Wish_Date__c</fullName>
        <description>A date for a service or a group of services to be terminated.</description>
        <inlineHelpText>A date for a service or a group of services to be terminated.</inlineHelpText>
        <label>Termination Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Voice_SAP_Id__c</fullName>
        <label>Voice SAP@Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_mLog_Request_ID__c</fullName>
        <description>mLog Request ID for TopNet orders</description>
        <inlineHelpText>mLog Request ID for TopNet orders</inlineHelpText>
        <label>mLog Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>UPC_Business_Service_Fulfillment_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Business Service Fulfillment</label>
        <queue>UPC_Business_Service_Fulfillment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UPC_Taifun_Provisioning_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>UPC Taifun Provisioning Queue</label>
        <queue>UPC_Taifun_Provisioning_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UPC_Topnet_Provisioning_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>UPC Topnet Provisioning Queue</label>
        <queue>UPC_Topnet_Provisioning_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>business_admin_upc_ch_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <filterScope>Queue</filterScope>
        <label>business.admin@upc.ch</label>
        <queue>business_admin_upc_ch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>internal_business_admin_upc_ch_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <filterScope>Queue</filterScope>
        <label>internal.business.admin@upc.ch</label>
        <queue>internal_business_admin_upc_ch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>internal_pme_upc_ch_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>internal.pme@upc.ch</label>
        <queue>internal_pme_upc_ch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>internal_sales_admin_upc_ch_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>internal.sales.admin@upc.ch</label>
        <queue>internal_sales_admin_upc_ch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>internal_solution_admin_upc_ch_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>internal.solution.admin@upc.ch</label>
        <queue>internal_solution_admin_upc_ch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>internal_upc_ch_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>internal.kmu@upc.ch</label>
        <queue>internal_kmu_upc_ch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>kmu_upc_ch_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>UPC_Flag_Case_BCSE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>kmu@upc.ch</label>
        <queue>kmu_upc_ch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>